Cleaned up some resources on the sign in screen.

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView"
+        android:id="@+id/background"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -21,29 +21,30 @@
     <ImageView
         android:layout_width="144dp"
         android:layout_height="144dp"
-        android:id="@+id/imageView2"
+        android:id="@+id/logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary"
+        android:layout_alignParentEnd="false" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:id="@+id/textView"
-        android:layout_below="@+id/imageView2"
+        android:id="@+id/app_name_text"
+        android:layout_below="@+id/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:textSize="28sp"
         android:textColor="#ffffff" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:text="Sign In With Facebook"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
+        android:layout_height="56dp"
+        android:text="@string/signin_facebook"
+        android:id="@+id/sign_in_button_facebook"
+        android:layout_below="@+id/app_name_text"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="@dimen/defualt_margin"
         android:layout_marginRight="@dimen/defualt_margin"
@@ -54,14 +55,14 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:text="Sign In With Twitter"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_centerVertical="true"
+        android:text="@string/signin_twitter"
+        android:id="@+id/sign_in_button_twitter"
+        android:layout_below="@+id/sign_in_button_facebook"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="@dimen/defualt_margin"
         android:layout_marginRight="@dimen/defualt_margin"
-        android:layout_marginTop="24dp"
         android:background="#4099ff"
+        android:layout_marginTop="24dp"
         android:textColor="#ffffff" />
 
 </RelativeLayout>
