--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,12 @@
         android:layout_gravity="start"
         android:orientation="vertical"
         android:background="#f382ff">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="256dp" />
+
+
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
