Did a litle work on a few Activities. Added a *lot* more.

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -6,4 +6,9 @@
     tools:context="io.github.ncca_fbla.fabric.LauncherActivity"
     android:background="@color/colorPrimary">
 
+    <ImageView
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="center" />
 </FrameLayout>
