Did some minor fixes and edits on a lot of activities.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
         <item name="android:textColorSecondary">#FFFFFF</item>
     </style>
 
+    <style name="AppTheme.TransparentActionBar">
+        <!-- TODO: Set ActionBar transparent -->
+    </style>
+
 </resources>
