Started working on some UI changes.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,8 @@
         <!-- TODO: Set ActionBar transparent -->
     </style>
 
+    <style name="AppTheme.SignIn" parent="AppTheme.NoActionBar">
+        <item name="android:windowBackground">@drawable/manhattan</item>
+    </style>
+
 </resources>
