--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,11 +13,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:tint="#99e91e63"
-        android:tintMode="src_over"
-        android:scaleType="centerCrop"
-        android:src="@drawable/manhattan"
-        android:contentDescription="@string/content_background" />
+        android:contentDescription="@string/content_background"
+        android:background="#99e91e63"
+        android:cropToPadding="false"
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:layout_width="144dp"
