--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#e91e63</color>
     <color name="colorPrimaryDark">#c2185b</color>
-    <color name="colorAccent">#aa00ff</color>
+    <color name="colorAccent">#00e676</color>
     <color name="primary_material_light">#e91e63</color>
     <color name="primary_dark_material_light">#c2185b</color>
-    <color name="accent_material_light">#aa00ff</color>
+    <color name="accent_material_light">#00e676</color>
 </resources>
