--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -1,76 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/defualt_margin"
-    android:layout_height="match_parent">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="300dp">
-
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView2"
-                android:layout_gravity="center"
-                android:src="@drawable/manhattan"
-                android:scaleType="centerCrop"
-                android:backgroundTintMode="src_over"
-                android:tint="#aa333333"
-                android:tintMode="src_over" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="What is 2+2?"
-                android:id="@+id/textView"
-                android:layout_gravity="left|top"
-                android:layout_marginTop="45dp"
-                android:layout_marginLeft="10dp"
-                android:textColor="#ffffff"
-                android:singleLine="false" />
-        </FrameLayout>
-
-    </android.support.v7.widget.CardView>
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="10dp">
-
+        android:elevation="8dp">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView3"
                 android:layout_gravity="center"
-                android:src="@drawable/manhattan"
-                android:scaleType="centerCrop"
                 android:backgroundTintMode="src_over"
+                android:scaleType="centerCrop"
+                android:src="@drawable/manhattan"
                 android:tint="#aa333333"
                 android:tintMode="src_over" />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="lol u wot m89?"
-                android:id="@+id/textView2"
                 android:layout_gravity="left|top"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="45dp"
-                android:layout_marginLeft="10dp"
+                android:singleLine="false"
+                android:text="What is 2+2?"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ffffff"
-                android:singleLine="false" />
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|bottom"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="15dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/share_selector" />
+            </LinearLayout>
         </FrameLayout>
 
     </android.support.v7.widget.CardView>
