--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -26,17 +26,17 @@
                 android:tintMode="src_over" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
                 android:singleLine="false"
-                android:text="What is 2+2?"
+                android:text="Loading..."
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ffffff"
-                android:textSize="24sp" />
+                android:textSize="28sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,15 +44,27 @@
                 android:layout_gravity="left|bottom"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/btn_share"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
+                    android:contentDescription="share_post"
                     android:src="@drawable/share_selector" />
+
+                <ImageButton
+                    android:id="@+id/btn_star"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="@null"
+                    android:contentDescription="Star Post"
+                    android:src="@drawable/ic_star" />
             </LinearLayout>
+
         </FrameLayout>
 
     </android.support.v7.widget.CardView>
