--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) NCCA FBLA 2016
+  ~ Written by James Parsons
+  ~
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/defualt_margin"
+    android:layout_margin="@dimen/default_margin"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
